# Montana

./: .gitignore  CLAUDE.md  CRITIC.md  Montana App v3.11.0.md  Montana App v3.12.0.md  Montana App v3.13.0.md  Montana App v3.14.0.md  Montana App v3.15.0.md  Montana App v3.16.0.md  Montana App v3.16.1.md  Montana Egress v1.0.0.md  Montana Network v1.0.0.md  Montana Network v1.1.0.md  Montana Network v1.10.0.md  Montana Network v1.11.0.md  Montana Network v1.15.0.md  Montana Network v1.16.0.md  Montana Network v1.17.0.md  Montana Network v1.18.0.md  Montana Network v1.19.0.md  Montana Network v1.2.0.md  Montana Network v1.20.0.md  Montana Network v1.3.0.md  Montana Network v1.3.1.md  Montana Network v1.4.0.md  Montana Network v1.5.0.md  Montana Network v1.8.0.md  Montana Network v1.9.0.md  Montana Protocol v35.25.0.md  Montana Protocol v35.25.1.md  Montana Protocol v35.26.0.md  Montana Protocol v35.26.1.md  Montana Protocol v35.26.2.md  Montana Protocol v35.27.0.md  Montana Protocol v35.28.0.md  Montana Protocol v35.29.0.md  Montana Protocol v35.29.1.md  Montana Protocol v36.0.0.md  Montana Protocol v36.1.0.md  Montana VPN Alliance v1.0.0.md  (+25 more)
Code/: .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  CRITIC.md  Cargo.toml  README.md  RELEASE-v1.0.0-rc.1.md  RELEASE-v1.0.0.md  ROADMAP.md  VERSION.md  clippy.toml
Code/.cargo/: audit.toml  config.toml
Code/.github/workflows/: ci.yml
Code/conformance/: spec-v35.26.1.contract  spec-v35.26.2.contract  spec-v35.27.0.contract
Code/crates/montana-node/: Cargo.toml  build.rs
Code/crates/montana-node/src/: identity.rs  lib.rs  main.rs  network.rs  node_lifecycle.rs  state.rs  timechain_state.rs
Code/crates/montana-node/tests/: e2e_init.rs  three_peer_e2e.rs
Code/crates/mt-account/src/: lib.rs
Code/crates/mt-account/tests/: determinism_invariants.rs
Code/crates/mt-bindings/: Cargo.toml  build-android.sh  build-ios-xcframework.sh  cbindgen.toml
Code/crates/mt-bindings/include/: module.modulemap  montana_ffi.h  mt_bindings.h
Code/crates/mt-bindings/src/: ffi_c.rs  ffi_e2e.rs  ffi_jni.rs  ffi_noise.rs  ffi_wasm.rs  lib.rs  mdns.rs  muq_addressing.rs  network.rs  rendezvous.rs  wake.rs
Code/crates/mt-bindings/tests/: e2e_ffi.rs  kat_cross_client.rs  kat_overlay.rs  mlkem_ffi.rs  smoke_local_selfhost.rs  smoke_remote_postman.rs  wasm_backend_kat.rs
Code/crates/mt-bootstrap/: Cargo.toml
Code/crates/mt-bootstrap/src/: lib.rs
Code/crates/mt-bootstrap/tests/: cache_and_dht.rs  deep_link_e2e.rs
Code/crates/mt-codec/src/: lib.rs
Code/crates/mt-conformance/: Cargo.toml
Code/crates/mt-conformance/src/: harness.rs  lib.rs  main.rs  vectors.rs
Code/crates/mt-consensus/: Cargo.toml
Code/crates/mt-consensus/src/: lib.rs
Code/crates/mt-consensus/tests/: determinism_invariants.rs
Code/crates/mt-crypto/: Cargo.toml
Code/crates/mt-crypto-native/: Cargo.toml
Code/crates/mt-crypto-native/csrc/: mt_crypto.c  mt_crypto.h
Code/crates/mt-crypto-native/src/: lib.rs
Code/crates/mt-crypto-native/tests/: nist_acvp_kat.rs  regression_baselines.rs
Code/crates/mt-crypto/src/: lib.rs
Code/crates/mt-crypto/tests/: mlkem_encap_decap.rs  native_consts_sync.rs
Code/crates/mt-egress/: Cargo.toml
Code/crates/mt-egress/src/: client.rs  exit.rs  lib.rs  relay.rs
Code/crates/mt-egress/tests/: e2e_control_plane.rs
Code/crates/mt-entry/: Cargo.toml
Code/crates/mt-entry/src/: lib.rs
Code/crates/mt-entry/tests/: determinism_invariants.rs  external_oracle.rs
Code/crates/mt-examples/examples/: m1_crypto.rs  m2_timechain_state.rs  m3_account.rs
Code/crates/mt-examples/src/: lib.rs
Code/crates/mt-genesis/src/: lib.rs  manifest.rs
Code/crates/mt-lottery/: Cargo.toml
Code/crates/mt-lottery/src/: lib.rs
Code/crates/mt-lottery/tests/: determinism_invariants.rs
Code/crates/mt-merkle/: Cargo.toml
Code/crates/mt-merkle/src/: lib.rs
Code/crates/mt-messenger-e2e/: Cargo.toml
Code/crates/mt-messenger-e2e/examples/: archive_tree.rs
Code/crates/mt-messenger-e2e/src/: archive.rs  archive_sync.rs  call.rs  compaction.rs  contacts.rs  content.rs  crypto.rs  device_registry.rs  handshake.rs  kdf.rs  labels.rs  lib.rs  media.rs  media_pin.rs  merkle.rs  peer_recovery.rs  pqxdh.rs  ratchet.rs  reconcile.rs  relay_policy.rs  safety.rs  sealed.rs  session.rs
Code/crates/mt-messenger-e2e/tests/: e2e_full.rs  e2e_recovery.rs
Code/crates/mt-mnemonic/: Cargo.toml
Code/crates/mt-mnemonic/src/: hkdf.rs  hmac.rs  lib.rs  mnemonic.rs  wordlist.rs
Code/crates/mt-net/: Cargo.toml
Code/crates/mt-net-transport/: Cargo.toml
Code/crates/mt-net-transport/src/: codec.rs  (+6 more)
Code/crates/mt-noise-pq/: Cargo.toml
Code/crates/mt-overlay/: Cargo.toml
Code/crates/mt-postman/: Cargo.toml
Code/crates/mt-rendezvous/: Cargo.toml
Code/crates/mt-state/: Cargo.toml
Code/crates/mt-sync/: Cargo.toml
Code/crates/mt-timechain/: Cargo.toml
Code/crates/mt-vpn-balance/: Cargo.toml
Code/crates/mt-wake/: Cargo.toml
Code/desktop/MontanaMonitor/: .gitignore  MontanaMonitor.swift  Package.swift  build.sh  quest.montana.monitor.plist
Code/docker/runtime/: Dockerfile  Dockerfile.node  QUICKSTART.md  docker-compose.yml  entrypoint.sh  nginx-decoy.conf  node-entrypoint.sh  xray-config.json.template
Code/docs/: CONFORMANCE.md  SPEC_DEVIATIONS.md  audit-checklist.md  build-from-source.md  security-cards.md
Code/montana-vpn/: README.md
Code/montana-vpn/config-template/: decoy-index.html  xray-config.json.template
Code/montana-vpn/docs/: architecture.md  client-config.md  operator-guide.md
Code/scripts/: commit-msg.sh  conformance-gate.sh  genesis-manifest.json  genesis-postman-manifest.example.json  install-docker.sh  install-hooks.sh  install-local-mac.sh  install-mac.sh  install-node.sh  install-vps-full.sh  install-vps.sh  montana-cascade-add  montana-explorer-api.py  montana-explorer-collect.py  montana-explorer.html  montana-health.py  oracle_python_sha256.py  pre-commit.sh  reset-state.sh
Код/crates/montana-node/: Cargo.toml
Код/crates/mt-account/: Cargo.toml
Код/crates/mt-examples/: Cargo.toml
Код/crates/mt-genesis/: Cargo.toml
(+421 files in other folders)
