[package]
name = "mt-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Единственный источник истины Montana для iOS / Android / Web. Native (iOS/Android/desktop) — re-exports mt-mnemonic/mt-crypto/mt-state/mt-account через C ABI (cdylib+staticlib); Web (wasm32) — деривация на mt-mnemonic + pure-Rust ml-dsa/ml-kem."

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
mt-mnemonic   = { path = "../mt-mnemonic" }
mt-codec      = { path = "../mt-codec" }
zeroize       = { workspace = true }
sha2          = { workspace = true }
mt-messenger-e2e = { path = "../mt-messenger-e2e" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mt-crypto     = { path = "../mt-crypto" }
mt-state      = { path = "../mt-state" }
mt-account    = { path = "../mt-account" }
mt-postman    = { path = "../mt-postman" }
mt-rendezvous = { path = "../mt-rendezvous" }
mt-bootstrap  = { path = "../mt-bootstrap" }
mt-overlay    = { path = "../mt-overlay" }
tokio         = { version = "=1.44.2", features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
getrandom    = { version = "0.4", features = ["wasm_js"] }
ml-dsa       = "0.1"
ml-kem       = { version = "0.2", features = ["deterministic"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dev-dependencies]
hex = "0.4"
mt-overlay = { path = "../mt-overlay" }
ml-dsa = "0.1"
ml-kem = { version = "0.2", features = ["deterministic"] }
chacha20poly1305 = { workspace = true }
sha2 = { workspace = true }
