[package]
name = "mt-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# M9 conformance suite — standalone test vectors из спеки для cross-impl
# verification. Используется любой второй реализацией Montana (Go, Swift,
# Python) для byte-exact assert против Rust reference.

[features]
default = []

[dependencies]
mt-net = { path = "../mt-net" }
mt-codec = { path = "../mt-codec" }
mt-crypto = { path = "../mt-crypto" }
mt-genesis = { path = "../mt-genesis" }
sha2 = { workspace = true }

[[bin]]
name = "conformance-gate"
path = "src/main.rs"
