[package]
name = "mt-crypto-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "=0.2.169"

[dev-dependencies]
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"

[build-dependencies]
cc = "=1.2.16"
openssl-src = "=300.5.5"
