[package]
name = "mt-entry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mt-codec = { path = "../mt-codec" }
mt-crypto = { path = "../mt-crypto" }
mt-genesis = { path = "../mt-genesis" }
mt-state = { path = "../mt-state" }

[dev-dependencies]
mt-crypto = { path = "../mt-crypto", features = ["testing"] }
mt-genesis = { path = "../mt-genesis" }
