[package]
name = "mt-messenger-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "Montana Messenger E2E — общий Rust-движок (PQXDH, KEM-храповик, слепые метки) для iOS/Web/Python. Спека Montana Messenger v0.40.0, Этапы 5-7. Клиенты линкуют, не реимплементируют."

[dependencies]
sha2 = { workspace = true }
zeroize = { workspace = true }
chacha20poly1305 = "0.10"
mt-mnemonic = { path = "../mt-mnemonic" }
mt-codec = { path = "../mt-codec" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mt-crypto = { path = "../mt-crypto" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ml-dsa = "0.1"
ml-kem = { version = "0.2", features = ["deterministic"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
hex = "0.4"
