[package]
name = "mt-mnemonic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mt-codec = { path = "../mt-codec" }
sha2 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
mt-crypto = { path = "../mt-crypto" }
