[package]
name = "mt-net-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Heavy-dep transport crate (libp2p ~120 transitive). Изолирован от no_std mt-net
# ядра. См. AUDIT.md → audit chain Layer 1-3 для capability checklist.

[features]
default = []
testing = ["mt-crypto/testing", "mt-net/testing"]

[dependencies]
mt-net = { path = "../mt-net" }
mt-codec = { path = "../mt-codec" }
mt-crypto = { path = "../mt-crypto" }

# libp2p stack — pinned exact версии per [C-1] SSOT + [C-6] reproducible builds
mt-noise-pq = { path = "../mt-noise-pq" }
sha2 = "0.10"
multihash = "0.19"
libp2p = { version = "=0.56.0", default-features = false, features = ["tcp", "tls", "noise", "yamux", "macros", "tokio", "request-response"] }
tokio = { version = "=1.40.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
futures = "=0.3.31"
async-trait = "=0.1.83"

# Logging surface (production observability)
tracing = "=0.1.41"

# Error handling
thiserror = "=1.0.69"

[dev-dependencies]
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "=1.40.0", features = ["rt-multi-thread", "macros", "test-util"] }
futures = { version = "=0.3.31", features = ["std"] }
