[package]
name = "mt-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
testing = ["mt-crypto/testing"]
# transport-randomness pulls OS CSPRNG; gated for no_std cores that don't need it.
csprng = ["getrandom"]

[dependencies]
mt-codec = { path = "../mt-codec" }
mt-crypto = { path = "../mt-crypto" }
sha2 = { workspace = true }
getrandom = { workspace = true, optional = true }
