[package]
name = "mt-noise-pq"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
mt-crypto = { path = "../mt-crypto" }
sha2 = "0.10"
zeroize = "1.8"
getrandom = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
