[package]
name = "mt-postman"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Плоский TCP+TLS-транспорт почтальона (Montana P2P Network, Этап 1; спека §152
# «TCP/TLS-443 обязателен» — операторы режут non-443 UDP).
# rustls/rcgen/tokio-rustls — те же lock-версии, что тянет боевой mt-net-transport ([C-1] SSOT).
# Транспортный хоп QUIC-TLS = admission-обёртка A-3 ([I-16]); реальная security —
# E2E-payload (opaque) + ML-DSA-регистрация. Не consensus state.

[dependencies]
mt-overlay = { path = "../mt-overlay" }
mt-crypto = { path = "../mt-crypto" }
mt-state = { path = "../mt-state" }
mt-codec = { path = "../mt-codec" }

rustls = { version = "=0.23.40", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "=0.26.1", default-features = false, features = ["ring"] }
rcgen = "=0.13.2"
tokio = { version = "=1.44.2", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
thiserror = "=1.0.69"
getrandom = { workspace = true }

[dev-dependencies]
mt-rendezvous = { path = "../mt-rendezvous" }
mainline = "=6.0.1"
tokio = { version = "=1.44.2", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }

[[bin]]
name = "postman-server"
path = "src/bin/postman-server.rs"
