[package]
name = "mt-timechain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sha2 = { workspace = true }
mt-codec = { path = "../mt-codec" }
mt-crypto = { path = "../mt-crypto" }
mt-genesis = { path = "../mt-genesis" }
mt-state = { path = "../mt-state" }
