[package]
name = "mt-wake"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mt-crypto = { path = "../mt-crypto" }
getrandom = { workspace = true }
thiserror = "=1.0.69"

[dev-dependencies]
hex = "=0.4.3"
mt-overlay = { path = "../mt-overlay" } # dev-only: SSOT-сверка RECV_ID_LEN == QUEUE_ID_SIZE
