[package]
name = "montana-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "montana-node"
path = "src/main.rs"

[dependencies]
mt-account = { path = "../mt-account" }
mt-codec = { path = "../mt-codec" }
mt-consensus = { path = "../mt-consensus" }
mt-crypto = { path = "../mt-crypto" }
mt-entry = { path = "../mt-entry" }
mt-genesis = { path = "../mt-genesis" }
mt-lottery = { path = "../mt-lottery" }
mt-merkle = { path = "../mt-merkle" }
zeroize = { workspace = true }
mt-mnemonic = { path = "../mt-mnemonic" }
mt-timechain = { path = "../mt-timechain" }
mt-state = { path = "../mt-state" }
mt-store = { path = "../mt-store" }
getrandom = { workspace = true }
libc = "=0.2.169"
# libp2p Ed25519 transport identity + Swarm (M8 cross-machine networking).
# Pinned точная версия per [C-1] SSOT + [C-6] reproducible builds; матчит mt-net-transport.
libp2p = { version = "=0.56.0", default-features = false, features = ["ed25519", "tokio", "tcp", "tls", "noise", "yamux", "request-response", "macros"] }
mt-net = { path = "../mt-net" }
mt-net-transport = { path = "../mt-net-transport" }
tokio = { version = "=1.40.0", features = ["rt-multi-thread", "macros", "signal", "net", "io-util", "time"] }
futures = "=0.3.31"
tracing = "=0.1.41"
