[package]
name = "mt-account"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mt-codec = { path = "../mt-codec" }
mt-crypto = { path = "../mt-crypto" }
mt-genesis = { path = "../mt-genesis" }
mt-state = { path = "../mt-state" }

[dev-dependencies]
sha2 = { workspace = true }
mt-crypto = { path = "../mt-crypto", features = ["testing"] }
mt-merkle = { path = "../mt-merkle" }
